[gd_scene load_steps=16 format=2]

[ext_resource path="res://gui/menu_gui.gd" type="Script" id=1]
[ext_resource path="res://images/game_logo.png" type="Texture" id=2]
[ext_resource path="res://images/play.png" type="Texture" id=3]
[ext_resource path="res://images/settings.png" type="Texture" id=4]
[ext_resource path="res://images/shop.png" type="Texture" id=5]
[ext_resource path="res://images/end_island.png" type="Texture" id=6]
[ext_resource path="res://images/stats.png" type="Texture" id=7]
[ext_resource path="res://images/challenges.png" type="Texture" id=8]
[ext_resource path="res://images/pinion1.png" type="Texture" id=9]
[ext_resource path="res://images/wb.background.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]

resource_name = "start"
length = 0.5
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("game_logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.31, 0.46 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 314.371, -205.334 ), Vector2( 314.371, 209.666 ), Vector2( 314.371, 358.666 ), Vector2( 314.371, 348.666 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wb.background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.46 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("play:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.31 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -124.742, 799.813 ), Vector2( 193.925, 799.813 ), Vector2( 215.258, 799.813 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("shop:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.31 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 720.865, 798.736 ), Vector2( 495.865, 798.736 ), Vector2( 470.865, 798.736 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("challenges:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.15, 0.31 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 520.861, 540.313 ), Vector2( 396.022, 679.99 ), Vector2( 370.861, 700.313 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("stats:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.15, 0.31 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 530.954, 1053.93 ), Vector2( 401.277, 924.251 ), Vector2( 370.954, 893.928 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "press"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 470.865, 798.736 ), Vector2( 470.865, 798.736 ), Vector2( 470.865, 798.736 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.862727, 0.862727 ), Vector2( 0.838343, 0.838343 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.581098 ) ]
}

[sub_resource type="Animation" id=3]

length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../play:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 215.258, 799.813 ), Vector2( 215.258, 799.813 ), Vector2( 215.258, 799.813 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../play:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.883851, 0.883851 ), Vector2( 0.852926, 0.852926 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../play:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.635137 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../challenges:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.846103, 0.846103 ), Vector2( 0.83153, 0.83153 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../challenges:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 370.861, 700.313 ), Vector2( 370.861, 700.313 ), Vector2( 370.861, 700.313 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../challenges:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.608118 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "press"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../stats:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.862189, 0.862189 ), Vector2( 0.853207, 0.853207 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../stats:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.486471 ) ]
}

[node name="menu_gui" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="animation" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/start = SubResource( 1 )
blend_times = [  ]

[node name="game_logo" type="Sprite" parent="." index="1"]

position = Vector2( 314.371, -205.334 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="play" type="Sprite" parent="." index="2"]

position = Vector2( -124.742, 799.813 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="settings" type="TouchScreenButton" parent="." index="3"]

position = Vector2( 525.935, 46.973 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="shop" type="Sprite" parent="." index="4"]

position = Vector2( 720.865, 798.736 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="touch" type="TouchScreenButton" parent="shop" index="0"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0.312897, -84.8053 )
rotation = 0.785398
scale = Vector2( 0.211907, 0.211907 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="anim" type="AnimationPlayer" parent="shop" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/press = SubResource( 2 )
blend_times = [  ]

[node name="stats" type="Sprite" parent="." index="5"]

position = Vector2( 530.954, 1053.93 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="challenges" type="Sprite" parent="." index="6"]

position = Vector2( 520.861, 540.313 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="play_btn" type="TouchScreenButton" parent="." index="7"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 216.386, 659.356 )
rotation = 0.785398
scale = Vector2( 0.429407, 0.429407 )
normal = ExtResource( 9 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="anim" type="AnimationPlayer" parent="play_btn" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/press = SubResource( 3 )
blend_times = [  ]

[node name="wb.background" type="Sprite" parent="." index="8"]

position = Vector2( 326.524, 673.26 )
scale = Vector2( 1.21359, 1.19024 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Visibility" ]

[node name="play_timer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="ch_timer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="sh_timer" type="Timer" parent="." index="11"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="ch" type="TouchScreenButton" parent="." index="12"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 370.48, 619.45 )
rotation = 0.785398
scale = Vector2( 0.778025, 0.74145 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="anim" type="AnimationPlayer" parent="ch" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/press = SubResource( 4 )
blend_times = [  ]

[node name="scorebtn" type="TouchScreenButton" parent="." index="13"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 370.48, 810.374 )
rotation = 0.785398
scale = Vector2( 0.778025, 0.74145 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="anim" type="AnimationPlayer" parent="scorebtn" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/press = SubResource( 5 )
blend_times = [  ]

[connection signal="released" from="settings" to="." method="_on_settings_released"]

[connection signal="pressed" from="shop/touch" to="." method="_on_touch_pressed"]

[connection signal="released" from="shop/touch" to="." method="_on_touch_released"]

[connection signal="pressed" from="play_btn" to="." method="_on_play_btn_pressed"]

[connection signal="released" from="play_btn" to="." method="_on_play_btn_released"]

[connection signal="timeout" from="play_timer" to="." method="_on_play_timer_timeout"]

[connection signal="timeout" from="ch_timer" to="." method="_on_ch_timer_timeout"]

[connection signal="timeout" from="sh_timer" to="." method="_on_sh_timer_timeout"]

[connection signal="pressed" from="ch" to="." method="_on_ch_pressed"]

[connection signal="released" from="ch" to="." method="_on_TouchScreenButton_released"]

[connection signal="pressed" from="scorebtn" to="." method="_on_scorebtn_pressed"]

[connection signal="released" from="scorebtn" to="." method="_on_scorebtn_released"]


